# cline

./: .gitignore  BUILD.md  package-lock.json  package.json
cline-desktop/: README.md  forge.config.ts  package-lock.json  package.json  tsconfig.json  webpack.plugins.ts
proto/: build-proto-buf.js
scripts/: build-proto.mjs
src-tauri/: Cargo.toml  build.rs  readme.md  tauri.conf.json  webview-ui-migration.md
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config_manager.rs  health_check.rs  host_bridge.rs  main.rs  node_bridge.rs  webview_commands.rs
src-tauri/src/core/api/providers/: cline.ts  fireworks.ts  openai.ts  openrouter.ts  requesty.ts  xai.ts
src-tauri/src/core/prompts/: commands.ts
src-tauri/src/core/task/: ToolExecutor.ts
src-tauri/src/services/browser/: BrowserSession.ts
src-tauri/src/shared/proto/: index.host.ts
src-tauri/src/shared/proto/cline/: account.ts  browser.ts  checkpoints.ts  commands.ts  file.ts  mcp.ts  models.ts  slash.ts  state.ts  task.ts  ui.ts  web.ts
src-tauri/src/shared/proto/host/: diff.ts  env.ts  testing.ts  watch.ts  window.ts  workspace.ts
src-tauri/webview-ui/: index.html  package-lock.json  package.json  vite.config.ts
src-tauri/webview-ui/src/: TauriTestApp.tsx  main.tsx
src-tauri/webview-ui/src/components/settings/sections/: BrowserSettingsSection.tsx
src-tauri/webview-ui/src/context/: ExtensionStateContext.tsx
src-tauri/webview-ui/src/services/: grpc-client.ts
src-tauri/webview-ui/src/utils/: tauri-adapter.ts  vscode.ts
webview-ui/: package-lock.json  package.json  (+1 more)
(+22 files in other folders)
