[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }
tonic-build = "0.12"
prost-build = "0.13"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
tauri = { version = "2.8.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-log = "2.0.0-beta.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
